项目第四天（下）

--- a/src/html/detail.html
+++ b/src/html/detail.html
@@ -363,88 +363,12 @@
            </div>
            <div class="body_list">
                <div class="body_list_left">
-                   <img src="src/images/detail/9010811.jpg_80x87.jpg" class="body_img">
+                   <img src="../images/9010811.jpg_80x87.jpg" class="body_img">
                    <p>6601055*<br/>北辰区北辰道2号浩物汽车园*****</p>
                </div>
                <div class="body_list_right">
                    <div class="score_date">
-                       整体评分：<img src="src/images/detail/review_star_fen.gif">
-                       <img src="../images/review_star_fen.gif">
-                       <img src="../images/review_star_fen.gif">
-                       <img src="../images/review_star_fen.gif">
-                       <img src="../images/review_star_fen.gif">
-                       <span class="date_r">评价时间：2018-03-18 IP：112.64.119.2*</span>
-                   </div>
-                   <div class="score_cont">
-                     评价内容：<span>老婆很喜欢，以后会经常光顾的。</span>
-                   </div>
-               </div>
-           </div>
-           <div class="body_list">
-               <div class="body_list_left">
-                   <img src="src/images/detail/9010811.jpg_80x87.jpg" class="body_img">
-                   <p>6601055*<br/>北辰区北辰道2号浩物汽车园*****</p>
-               </div>
-               <div class="body_list_right">
-                   <div class="score_date">
-                       整体评分：<img src="src/images/detail/review_star_fen.gif">
-                       <img src="../images/review_star_fen.gif">
-                       <img src="../images/review_star_fen.gif">
-                       <img src="../images/review_star_fen.gif">
-                       <img src="../images/review_star_fen.gif">
-                       <span class="date_r">评价时间：2018-03-18 IP：112.64.119.2*</span>
-                   </div>
-                   <div class="score_cont">
-                     评价内容：<span>老婆很喜欢，以后会经常光顾的。</span>
-                   </div>
-               </div>
-           </div>
-           <div class="body_list">
-               <div class="body_list_left">
-                   <img src="src/images/detail/9010811.jpg_80x87.jpg" class="body_img">
-                   <p>6601055*<br/>北辰区北辰道2号浩物汽车园*****</p>
-               </div>
-               <div class="body_list_right">
-                   <div class="score_date">
-                       整体评分：<img src="src/images/detail/review_star_fen.gif">
-                       <img src="../images/review_star_fen.gif">
-                       <img src="../images/review_star_fen.gif">
-                       <img src="../images/review_star_fen.gif">
-                       <img src="../images/review_star_fen.gif">
-                       <span class="date_r">评价时间：2018-03-18 IP：112.64.119.2*</span>
-                   </div>
-                   <div class="score_cont">
-                     评价内容：<span>老婆很喜欢，以后会经常光顾的。</span>
-                   </div>
-               </div>
-           </div>
-           <div class="body_list">
-               <div class="body_list_left">
-                   <img src="src/images/detail/9010811.jpg_80x87.jpg" class="body_img">
-                   <p>6601055*<br/>北辰区北辰道2号浩物汽车园*****</p>
-               </div>
-               <div class="body_list_right">
-                   <div class="score_date">
-                       整体评分：<img src="src/images/detail/review_star_fen.gif">
-                       <img src="../images/review_star_fen.gif">
-                       <img src="../images/review_star_fen.gif">
-                       <img src="../images/review_star_fen.gif">
-                       <img src="../images/review_star_fen.gif">
-                       <span class="date_r">评价时间：2018-03-18 IP：112.64.119.2*</span>
-                   </div>
-                   <div class="score_cont">
-                     评价内容：<span>老婆很喜欢，以后会经常光顾的。</span>
-                   </div>
-               </div>
-           </div>
-           <div class="body_list">
-               <div class="body_list_left">
-                   <img src="src/images/detail/9010811.jpg_80x87.jpg" class="body_img">
-                   <p>6601055*<br/>北辰区北辰道2号浩物汽车园*****</p>
-               </div>
-               <div class="body_list_right">
-                   <div class="score_date">
-                       整体评分：<img src="src/images/detail/review_star_fen.gif">
+                       整体评分：<img src="../images/review_star_fen.gif">
                        <img src="../images/review_star_fen.gif">
                        <img src="../images/review_star_fen.gif">
                        <img src="../images/review_star_fen.gif">
@@ -463,7 +387,83 @@
                </div>
                <div class="body_list_right">
                    <div class="score_date">
-                       整体评分：<img src="src/images/detail/review_star_fen.gif">
+                       整体评分：<img src="../images/review_star_fen.gif">
+                       <img src="../images/review_star_fen.gif">
+                       <img src="../images/review_star_fen.gif">
+                       <img src="../images/review_star_fen.gif">
+                       <img src="../images/review_star_fen.gif">
+                       <span class="date_r">评价时间：2018-03-18 IP：112.64.119.2*</span>
+                   </div>
+                   <div class="score_cont">
+                     评价内容：<span>老婆很喜欢，以后会经常光顾的。</span>
+                   </div>
+               </div>
+           </div>
+           <div class="body_list">
+               <div class="body_list_left">
+                   <img src="../images/9010811.jpg_80x87.jpg" class="body_img">
+                   <p>6601055*<br/>北辰区北辰道2号浩物汽车园*****</p>
+               </div>
+               <div class="body_list_right">
+                   <div class="score_date">
+                       整体评分：<img src="../images/review_star_fen.gif">
+                       <img src="../images/review_star_fen.gif">
+                       <img src="../images/review_star_fen.gif">
+                       <img src="../images/review_star_fen.gif">
+                       <img src="../images/review_star_fen.gif">
+                       <span class="date_r">评价时间：2018-03-18 IP：112.64.119.2*</span>
+                   </div>
+                   <div class="score_cont">
+                     评价内容：<span>老婆很喜欢，以后会经常光顾的。</span>
+                   </div>
+               </div>
+           </div>
+           <div class="body_list">
+               <div class="body_list_left">
+                   <img src="../images/9010811.jpg_80x87.jpg" class="body_img">
+                   <p>6601055*<br/>北辰区北辰道2号浩物汽车园*****</p>
+               </div>
+               <div class="body_list_right">
+                   <div class="score_date">
+                       整体评分：<img src="../images/review_star_fen.gif">
+                       <img src="../images/review_star_fen.gif">
+                       <img src="../images/review_star_fen.gif">
+                       <img src="../images/review_star_fen.gif">
+                       <img src="../images/review_star_fen.gif">
+                       <span class="date_r">评价时间：2018-03-18 IP：112.64.119.2*</span>
+                   </div>
+                   <div class="score_cont">
+                     评价内容：<span>老婆很喜欢，以后会经常光顾的。</span>
+                   </div>
+               </div>
+           </div>
+           <div class="body_list">
+               <div class="body_list_left">
+                   <img src="../images/9010811.jpg_80x87.jpg" class="body_img">
+                   <p>6601055*<br/>北辰区北辰道2号浩物汽车园*****</p>
+               </div>
+               <div class="body_list_right">
+                   <div class="score_date">
+                       整体评分：<img src="../images/review_star_fen.gif">
+                       <img src="../images/review_star_fen.gif">
+                       <img src="../images/review_star_fen.gif">
+                       <img src="../images/review_star_fen.gif">
+                       <img src="../images/review_star_fen.gif">
+                       <span class="date_r">评价时间：2018-03-18 IP：112.64.119.2*</span>
+                   </div>
+                   <div class="score_cont">
+                     评价内容：<span>老婆很喜欢，以后会经常光顾的。</span>
+                   </div>
+               </div>
+           </div>
+           <div class="body_list">
+               <div class="body_list_left">
+                   <img src="../images/9010811.jpg_80x87.jpg" class="body_img">
+                   <p>6601055*<br/>北辰区北辰道2号浩物汽车园*****</p>
+               </div>
+               <div class="body_list_right">
+                   <div class="score_date">
+                       整体评分：<img src="../images/review_star_fen.gif">
                        <img src="../images/review_star_fen.gif">
                        <img src="../images/review_star_fen.gif">
                        <img src="../images/review_star_fen.gif">
