--- a/src/html/login.html
+++ b/src/html/login.html
@@ -95,7 +95,7 @@
             <div class="search">
                 <form name="i-search" method="post">
                     <div class="input-group">
-                        <input type="text" placeholder="" class="input-group-cont">
+                        <input type="text" placeholder="商品分类" class="input-group-cont" id="placehold">
                         <span class="input-group-but">
                             <button class="btn">搜索</button>
                         </span>
@@ -116,7 +116,7 @@
                 <ul class="rex">
                     <li class="top-ul">
                         <a href="login.html" class="on">登录</a>
-                        <a href="register.html">注册</a>
+                        <!-- <a href="register.html">注册</a> -->
                     </li>
                     <li class="right box box1">
                         <span class="red-color">使用手机验证码登录</span>
@@ -205,4 +205,6 @@
     </div>   
 </body>
 </html>
+ <script src="../../dist/js/jquery-1.10.1.min.js"></script>
+<script src="../../dist/js/common.js"></script>
 <script src="../../dist/js/login.js"></script>
