--- a/src/html/entry.html
+++ b/src/html/entry.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>购物车</title>
-    <link rel="stylesheet" href="../../dist/css/index.css">
+	<title>注册</title>
+	<link rel="SHORTCUT ICON" href="../images/small.png">
+	<link rel="stylesheet" href="../../dist/css/index.css">
 </head>
 <body>
-	<nav class="site-nav">
+	   <!-- nav -->
+    <nav class="site-nav">
         <div class="nav-content">
             <ul class="site-nav-l">
                 <li class="menu">
@@ -38,7 +38,8 @@
             </ul>
             <ul class="site-nav-r">
                 <li class="menu">
-                    <a href="./login.html" target="_blank">你好，请登录</a><a href="login.html" target="_blank">注册</a>
+                    <a href="./login.html">你好，请登录</a>
+                    <a href="./register.html">注册</a>
                 </li>
                 <li class="menu">|</li>
                 <li class="menu">
@@ -70,110 +71,95 @@
                     </a>
                     <div class="shopping-outer">
                         <div class="shopping-inner">您的购物车中没有商品，
-                            <a href="javascript:;">快去选购吧！</a>
+                            <a href="./cart.html">快去选购吧！</a>
                         </div>
                     </div>
                 </li>
                 <li class="menu">|</li>
-                <li class="menu" style="margin-left: 8px; color: #737373;">中国鲜花礼品网：中国鲜花网领先品牌</li>
+                <li class="menu">
+                    <a href="javascript:;">中国鲜花礼品网：中国鲜花网领先品牌</a>
+                </li>
             </ul>
         </div>
     </nav>
+    <!-- header- -->
     <header>
         <div class="head">
             <div class="head-logo">
-                <h1><a href="javascript:;"></a></h1>
+                <h1>
+                    <a href="index.html"></a>
+                </h1>
                 <i></i>
                 <h2>中国鲜花礼品网 始于2005，简称花礼网</h2>
             </div>
+            <div class="search">
+                <form name="i-search" method="post">
+                    <div class="input-group">
+                        <input type="text" placeholder="商品分类" class="input-group-cont" id="placehold">
+                        <span class="input-group-but">
+                            <button class="btn">搜索</button>
+                        </span>
+                        <ul id="ss_uo"></ul>
+                    </div>
+                </form>
+            </div>
             <div class="service">
                 <span service-iphone></span>123-456-7810
-                <a href="javascript:;"><span class="ear"></span>在线客服</a>
+                <a href="javascript:;">
+                    <span class="ear"></span>在线客服</a>
             </div>
         </div>
     </header>
-    <!-- 购物车中间内容 -->
-     <div class="cart_panel">
-        <div class="cart">
-            <div class="cart_big">
-                <div class="car_em">
-                    <img src="../images/cart_e.jpg" alt="">
-                </div>
-                <div class="cue">
-                    <a href="./index.html">去逛逛<b> > </b></a>
-                </div>
-            </div>
-        </div>
-        <div class="panel_add">
-            <div class="cart_head">
-                <ul class="order_title">
-                    <li class="selecter"></li>
-                    <li class="product">商品名称</li>
-                    <li class="market_price">市场价</li>
-                    <li class="order_price">订购价</li>
-                    <li class="num">数量</li>
-                    <li class="operate">操作</li>
-                </ul>
-            </div>
-            <div class="cart_body">
-                <ul class="body_list">
-                    <li class="selecter">
-                        <span class="i_btn"></span>
+    <div class='main_bg'>
+        <div class="main_1">
+            <div class="right-box">
+                <ul class="rex">
+                    <li class="top-ul">
+                      <!--   <a href="login.html" class="on">登录</a> -->
+                        <a href="register.html">注册</a>
                     </li>
-                    <li class="img_box"><a href="javascript:;""><img src="../images/9010966.jpg_80x87.jpg"></a></li>
-                    <li class="product">
-                        <a href="javascript:;">
-                            <span class="product_title">[鲜花]一往情深一精品玫瑰礼盒:19枝红玫瑰，勿忘我适量</span>
-                            <span class="feature"></span>
-                        </a>
+                    <li class="right box box1">
+                        <span class="red-color">使用手机验证码登录</span>
                     </li>
-                    <li class="market_price">
-                        <span class="price_sign">¥</span><span class="price_num">315</span>
+                    <li class="user box center">
+                        <div><span class="user-pic"></span></div>
+                        <input type="text" id="user" placeholder="E-mail地址/手机号" autocomplete="off">
                     </li>
-                    <li class="order_price">
-                        <span class="price_sign">¥</span><span class="price_num">235</span>
+                    <li class="pasd box center">
+                        <div><span class="pasd-pic"></span></div>
+                        <input type="text" id="pasd" placeholder="用户密码" autocomplete="off">
                     </li>
-                    <li class="num">
-                        <div class="input_num">
-                            <a href="javascript:;" class="btn btn_default no"><i class="ico ico_minus"></i></a>
-                            <input type="text" class="form_control input-sm" name="cpsl" value="1" maxlength="3">
-                            <a href="javascript:" class="btn btn_default"><i class="ico ico_add"></i></a>
-                        </div>
+                    <li class="right box">
+                        <span class="red-color">忘记密码 ？</span>
                     </li>
-                    <li class="operate">
-                        <a href="javascript:;" class="delBtn">删除</a><br><a href="javascript:;" class="collectBtn">移到我的收藏</a>
+                    <li class="box last">
+                        <a href="javascript:;">登录</a>
+                    </li>
+                    <li class="box link">
+                        <a href="javascript:;" class="box_down">微信</a><span class="down">|</span>
+                        <a href="javascript:;" class="box_down">QQ</a><span class="down">|</span>
+                        <a href="javascript:;" class="box_down">支付宝</a>
                     </li>
                 </ul>
             </div>
-        </div>
-        <div class="Choice">
-            <div class="Choice_left">
-                <span class="go"></span>
-                <a href="./index.html" class="Continue">继续挑选</a>
-                <div class="money">应付金额：
-                    <span class="money_style">¥</span><span class="money_num">0</span>
-                </div>
-            </div>
-            <button class="Choice_right">去结算</button>
         </div>
     </div>
-   <!-- 尾部导航 -->
-        <div class="footer-nav">
-            <div class="footer-nav-cont">
-                <ul class="nav-cont-list">
-                    <li><a href="./index.html">首页</a></li>
-                    <li><a href="javascript:;">关于我们</a></li>
-                    <li><a href="javascript:;">媒体报道</a></li>
-                    <li><a href="javascript:;">联系方式</a></li>
-                    <li><a href="javascript:;">企业团购</a></li>
-                    <li><a href="javascript:;">花店加盟</a></li>
-                    <li><a href="javascript:;">友情链接</a></li>
-                    <li><a href="javascript:;">在线补款</a></li>
-                    <li class="last"><a href="javascript:;">为什么选择中国鲜花礼品网</a></li>
-                </ul>
-            </div>
+    <div class="footer-nav">
+        <div class="footer-nav-cont">
+            <ul class="nav-cont-list">
+                <li><a href="./index.html">首页</a></li>
+                <li><a href="javascript:;">关于我们</a></li>
+                <li><a href="javascript:;">媒体报道</a></li>
+                <li><a href="javascript:;">联系方式</a></li>
+                <li><a href="javascript:;">企业团购</a></li>
+                <li><a href="javascript:;">花店加盟</a></li>
+                <li><a href="javascript:;">友情链接</a></li>
+                <li><a href="javascript:;">在线补款</a></li>
+                <li class="last"><a href="javascript:;">为什么选择中国鲜花礼品网</a></li>
+            </ul>
         </div>
-<!-- common footer -->
+    </div>
+    <!-- common footer -->
     <footer>
         <div class="lasting">
             <div class="auth">
@@ -216,9 +202,9 @@
             <li><a href="javascript:;">商标注册</a></li>
             <li><a href="javascript:;" class="link-end">眼镜店</a></li>
         </ul>
-    </div> 
+    </div>   
 </body>
 </html>
- <script src="../../dist/js/jquery-1.10.1.min.js"></script>
+<script src="../../dist/js/jquery-1.10.1.min.js"></script>
 <script src="../../dist/js/common.js"></script>
-<script src="../../dist/js/cart.js"></script>
+<script src="../../dist/js/entry.js"></script>
