项目第四天（下下）

--- a/src/html/entry.html
+++ b/src/html/entry.html
@@ -113,9 +113,9 @@
     <div class='main_bg'>
         <div class="main_1">
             <div class="right-box">
-                <ul class="rex">
+                <!-- <ul class="rex">
                     <li class="top-ul">
-                      <!--   <a href="login.html" class="on">登录</a> -->
+                        <a href="login.html" class="on">登录</a>
                         <a href="register.html">注册</a>
                     </li>
                     <li class="right box box1">
@@ -140,7 +140,17 @@
                         <a href="javascript:;" class="box_down">QQ</a><span class="down">|</span>
                         <a href="javascript:;" class="box_down">支付宝</a>
                     </li>
-                </ul>
+                </ul> -->
+                <form action="javascriptL:;" >
+					<div class="box1">账号:<input type="text" id="txt" placeholder="请输入内容" style="margin-left: 15px"><span id="span1"></span>
+					</div>
+					
+					<div class="box2">密码:<input type="password" id="psw" style="margin-left: 15px"><span id="span2"></span></div>
+					<div class="box3">手机号:
+					<input type="text" id="num" placeholder="请输入内容"><span id="span3"></span></div>
+					<div class="box4">邮箱:<input type="text" id="emil" placeholder="请输入内容" style="margin-left: 15px"><span id="span4"></span></div>
+					<button>注册</button>
+	          </form>
             </div>
         </div>
     </div>
