--- a/src/html/login.html
+++ b/src/html/login.html
@@ -124,10 +124,12 @@
                     <li class="user box center">
                         <div><span class="user-pic"></span></div>
                         <input type="text" id="user" placeholder="E-mail地址/手机号" autocomplete="off">
+                        <span id="span1"></span>
                     </li>
                     <li class="pasd box center">
                         <div><span class="pasd-pic"></span></div>
                         <input type="text" id="pasd" placeholder="用户密码" autocomplete="off">
+                        <span id="span2"></span>
                     </li>
                     <li class="right box">
                         <span class="red-color">忘记密码 ？</span>
