项目第五天（上）

--- a/src/html/cart.html
+++ b/src/html/cart.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>购物车</title>
+    <link rel="SHORTCUT ICON" href="../images/small.png">
     <link rel="stylesheet" href="../../dist/css/index.css">
 </head>
 <body>
@@ -86,6 +87,23 @@
                 <i></i>
                 <h2>中国鲜花礼品网 始于2005，简称花礼网</h2>
             </div>
+            <div class="search">
+                <form name="i-search" method="post">
+                    <div class="input-group">
+                        <input type="text" placeholder="" class="input-group-cont" id="placehold">
+                        <span class="input-group-but">
+                            <button class="btn">搜索</button>
+                        </span>
+                        <ul id="ss_uo"></ul>
+                    </div>
+                </form>
+                <span class="help-block">
+                    <a href="javascript:;" target="_blank">红玫瑰</a> |
+                    <a href="javascript:;" target="_blank">永生花</a> |
+                    <a href="javascript:;" target="_blank">生日鲜花</a> |
+                    <a href="javascript:;" target="_blank">礼品卡</a>
+                </span>
+            </div>
             <div class="service">
                 <span service-iphone></span>123-456-7810
                 <a href="javascript:;"><span class="ear"></span>在线客服</a>
@@ -115,8 +133,8 @@
                     <li class="operate">操作</li>
                 </ul>
             </div>
-            <div class="cart_body">
-                <ul class="body_list">
+            <div class="cart_body" id="info">
+                <!-- <ul class="body_list">
                     <li class="selecter">
                         <span class="i_btn"></span>
                     </li>
@@ -143,10 +161,10 @@
                     <li class="operate">
                         <a href="javascript:;" class="delBtn">删除</a><br><a href="javascript:;" class="collectBtn">移到我的收藏</a>
                     </li>
-                </ul>
+                </ul> -->
             </div>
         </div>
-        <div class="Choice">
+        <!-- <div class="Choice">
             <div class="Choice_left">
                 <span class="go"></span>
                 <a href="./index.html" class="Continue">继续挑选</a>
@@ -155,7 +173,7 @@
                 </div>
             </div>
             <button class="Choice_right">去结算</button>
-        </div>
+        </div> -->
     </div>
    <!-- 尾部导航 -->
         <div class="footer-nav">
