--- a/src/html/login.html
+++ b/src/html/login.html
@@ -128,7 +128,7 @@
                     </li>
                     <li class="pasd box center">
                         <div><span class="pasd-pic"></span></div>
-                        <input type="text" id="pasd" placeholder="用户密码" autocomplete="off">
+                        <input type="password" id="pasd" placeholder="用户密码" autocomplete="off">
                         <span id="span2"></span>
                     </li>
                     <li class="right box">
