--- a/src/html/list.html
+++ b/src/html/list.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>列表页</title>
+    <link rel="SHORTCUT ICON" href="../images/small.png">
     <link rel="stylesheet" href="../../dist/css/index.css">
 </head>
 
