项目第五天（下）

--- a/src/html/detail.html
+++ b/src/html/detail.html
@@ -40,7 +40,7 @@
             </ul>
             <ul class="site-nav-r">
                 <li class="menu">
-                    <a href="./login.html" target="_blank">你好，请登录</a><a href="login.html" target="_blank">注册</a>
+                    <a href="./login.html" target="_blank">你好，请登录</a><a href="entry.html" target="_blank">注册</a>
                 </li>
                 <li class="menu">|</li>
                 <li class="menu">
