--- a/src/html/login.html
+++ b/src/html/login.html
@@ -39,7 +39,7 @@
             <ul class="site-nav-r">
                 <li class="menu">
                     <a href="./login.html">你好，请登录</a>
-                    <a href="./register.html">注册</a>
+                    <a href="./entry.html">注册</a>
                 </li>
                 <li class="menu">|</li>
                 <li class="menu">
